# orbytes-claude-toolkit

./: .gitignore  AGENTS.md  README.md  claude.md  install.sh  package-lock.json  package.json  uninstall.sh
.claude/rules/: agents.md
.cursor/commands/: new-orbytes-app.md  task.md
.cursor/rules/: dev-workflow.mdc  figma-file-structure.mdc  notion.mdc  pipeline.mdc
.cursor/skills/: orbytes-context-sync  orbytes-workflow-sync  task-done
Orbytes Claude Toolkit/: workflow-stages.md
Orbytes Claude Toolkit/agents/: AGENT-INDEX.md
Orbytes Claude Toolkit/agents/designer/: agent.md
Orbytes Claude Toolkit/agents/developer/: agent.md
Orbytes Claude Toolkit/agents/project-manager/: agent.md
Orbytes Claude Toolkit/agents/seo/: agent.md
app/: CLAUDE.md
apps/notion-task-bridge/: README.md
apps/notion-task-bridge/menubar/src-tauri/: Cargo.toml  tauri.conf.json
apps/notion-task-bridge/menubar/src-tauri/src/: lib.rs  main.rs
commands/: new-orbytes-app.md  new-orbytes-website.md  task.md
global/: CLAUDE.md
global/agents/: copy-master.md  design-master.md  design-section.md  developer-master.md  project-manager.md  qa-component.md  qa-page.md  qa-section.md  strategy-master.md
global/commands/: new-orbytes-website.md  task.md
global/hooks/: README.md  orbytes-stop.sh  settings.json.example
global/rules/: astro.md  cloudcannon.md  cloudflare.md  dev-workflow.md  figma-file-structure.md  figma.md  pipeline.md  tailwind.md  webflow.md  workflow.md
scripts/: vendor-toolkit-for-notion-bridge.sh
website/: CLAUDE.md
(+52 files in other folders)
