[package]
name = "orbytes-notion-task-bridge-menubar"
version = "0.1.0"
description = "Orbytes Notion task bridge — menu bar worker"
authors = ["Will Teig"]
edition = "2021"

[lib]
name = "menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
